--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -3,6 +3,14 @@
 
 @import './style.css';
 
+html, body, #app {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 button,
 input,
 a {
